# openagentic

./: .dependency-cruiser.js  .dockerignore  .env.debug.example  .env.example  .eslintrc.js  .gitignore  .licenserc.yaml  .prettierignore  .prettierrc.js  .uc-harness-token  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile.exec  Caddyfile.local  GOVERNANCE.md  LICENSE  MAINTAINERS.md  NOTICE  README.md  SECURITY.md  SECURITY_VULNERABILITIES_REPORT.md  TERMS.md  THIRD_PARTY_LICENSES  TRADEMARK.md  admin-dom.yml  agenticwork-1.0.24.tgz  agenticwork-1.0.6.tgz  app.py  codemode-init-mockup.html  codemode-mockup.html  codemode-v3-mockup.html  docker-compose.gpu-nvidia.yml  docker-compose.gpu-wsl.yml  docker-compose.yml  install.ps1  install.sh  knip.config.js  network_log.json  (+9 more)
.auth/: .gitkeep
.githooks/: pre-commit
.github/: CODEOWNERS  SETUP.md  arc-runner-deployment.yaml  arc-setup.md  dependabot.yml  install-arc.sh  required-upsell-strings.tsv  setup-arc-aks.md
.prompts/: README.md  github-actions-ai.prompt.yml  pr-automation.prompt.yml  security-code-review.prompt.yml  test-generation.prompt.yml  wiki-documentation.prompt.yml
companions/: .gitkeep
docs/: air-gapped-install.md  entra-obo-setup.md  zero-telemetry.md
ee/: LICENSE  README.md
helm/: AKS_DEPLOYMENT.md  AZURE_KEYVAULT_SETUP.md  DEPLOYMENT_GUIDE.md  agenticwork-1.0.0.tgz  kong-gateway-api.yaml  kong-values-simple.yaml  kong-values-v2.yaml  kong-values.yaml  milvus-cluster-gpu.yaml  milvus-standalone-gpu.yaml  milvus-standalone.yaml
install/: README.md  openagentic-compose.tgz.sha256
live-dashboard/: .gitignore  astro.config.mjs  dash-event.sh  package.json  sync-status.py  update-status.py
scripts/: BUILD.md  BUILD_SYSTEM.md  aks-test.sh  backup.sh  build-local-k8s.sh  build.sh  deploy-helm-aks.sh  feedback-load-test.mjs  fix-k3s-secret-cache.sh  generate-uc-harness-token.sh  handoff-package-bundle.py  hotdeploy.sh  k6-load-test.js  k6-ollama-stress.js  k8s-bedrock-test-job.yaml  omhs-sync.sh  pre-commit  pre-upgrade-backup.sh  rotate-csi-s3-secret.sh  run-interleave-harness.sh  test-cdc-bedrock-proxy.py  test-cdc-bedrock-proxy.sh  test-codemode.sh  version.sh
services/: .dockerignore  fizzbuzz.py
services/mcps/oap-admin-mcp/: .dockerignore  .env.example  Dockerfile  Dockerfile.pre-chainguard  MIGRATION.md  README.md  pyproject.toml  requirements.txt  schema.prisma  server.py  test_server.sh
services/mcps/oap-admin-mcp/src/admin_mcp_server/: __init__.py  audit_tools.py  full_test_tools.py  server.py  user_tools.py  workflow_tools.py
services/mcps/oap-admin-mcp/tests/: test_chat_sessions_sql_columns.py
services/mcps/oap-agent-architect-mcp/: .env.example  README.md  pyproject.toml  requirements.txt  server.py
services/mcps/oap-alertmanager-mcp/: README.md  pyproject.toml  requirements.txt  server.py
services/mcps/oap-alertmanager-mcp/src/alertmanager_mcp_server/: __init__.py  server.py
services/mcps/oap-code-mcp/: README.md  pyproject.toml  requirements.txt  server.py
services/mcps/oap-grafana-mcp/: pyproject.toml  server.py
services/mcps/oap-grafana-mcp/src/grafana_mcp_server/: __init__.py
services/mcps/oap-incident-mcp/: README.md  pyproject.toml  server.py
services/mcps/oap-incident-mcp/src/incident_mcp_server/: __init__.py  server.py
services/mcps/oap-knowledge-mcp/: README.md  pyproject.toml  requirements.txt  server.py
services/mcps/oap-loki-mcp/: Dockerfile  README.md  pyproject.toml  requirements.txt  server.py
services/mcps/oap-loki-mcp/src/loki_mcp_server/: __init__.py  server.py
services/mcps/oap-prometheus-mcp/: Dockerfile  README.md  pyproject.toml  requirements.txt  server.py
services/mcps/oap-prometheus-mcp/src/prometheus_mcp_server/: __init__.py  server.py
services/mcps/oap-runbook-mcp/: README.md  pyproject.toml  requirements.txt  server.py
services/mcps/oap-runbook-mcp/src/runbook_mcp_server/: __init__.py  server.py
services/mcps/oap-web-mcp/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  server.py  ssrf_guard.py
services/mcps/oap-web-mcp/tests/: conftest.py  test_ssrf_guards.py
services/mcps/synth/: .gitignore  .gitleaks.toml  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  server.json  sonar-project.properties
services/mcps/synth/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
services/mcps/synth/.github/workflows/: ci.yml  dependency-review.yml  gitleaks.yml  release.yml  sonar-summary.yml  sonar.yml
services/mcps/synth/synth/: __init__.py
services/mcps/synth/synth/capabilities/: __init__.py  builtin.yaml
services/mcps/synth/synth/cli/: __init__.py  main.py
services/mcps/synth/synth/core/: __init__.py  executor.py  identity.py  llm.py  metrics.py  redaction.py  registry.py  synthesizer.py  types.py
services/mcps/synth/synth/grounding/: __init__.py
services/mcps/synth/synth/hitl/: __init__.py  gate.py  openclaw.py
services/mcps/synth/synth/mcp/: __init__.py  __main__.py  server.py
services/mcps/synth/synth/platform/: __init__.py  integration.py
services/mcps/synth/synth/sandbox/: __init__.py
synth/: .coveragerc  CONTRIBUTING.md  README.md  pyproject.toml
synth/.github/workflows/: ci.yml  dependency-review.yml  gitleaks.yml  release.yml  sonar-summary.yml  sonar.yml
synth/integrations/claude-code/synth/: SKILL.md
synth/integrations/openclaw/: README.md
synth/integrations/openclaw/synth/: SKILL.md
synth/synth/: __init__.py
synth/synth/capabilities/: __init__.py  builtin.yaml
synth/synth/cli/: __init__.py  main.py
synth/synth/core/: __init__.py  executor.py  identity.py  llm.py  metrics.py  redaction.py  registry.py  synthesizer.py  types.py
synth/synth/grounding/: __init__.py
synth/synth/hitl/: __init__.py  gate.py  openclaw.py
synth/synth/mcp/: __init__.py  server.py
synth/synth/platform/: __init__.py  integration.py
synth/synth/sandbox/: __init__.py
tests/: .env.docker  FLOWISE_TEST_VERIFICATION.md  MCP_INTERACTIVE_TEST_REPORT.md  README.md  brainbow-e2e.sh  chat-api-stress-test.sh  chat-stress-test.sh  chat_api_stress_test.py  config.js  (+15 more)
(+5589 files in other folders)
