[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-architect-mcp"
version = "1.0.0"
description = "Agent Architect MCP Server - Natural language agent/workflow creation"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.4.1",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
]

[project.scripts]
agent-architect-mcp = "server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["."]
