[project]
name = "oap-openagentic-mcp"
version = "0.6.0"
description = "MCP server for proxying code execution to OpenAgentic Manager"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.25.0",
    "structlog>=24.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
