[project]
name = "oap-grafana-mcp"
version = "1.0.0"
description = "MCP server for querying Grafana dashboards, datasources, and alert rules"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
]

[project.scripts]
oap-grafana-mcp = "grafana_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grafana_mcp_server"]
