[project]
name = "oap-knowledge-mcp"
version = "0.1.0"
description = "OpenAgentic Knowledge MCP - Tool guidance and documentation for LLMs"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "structlog>=24.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
oap-knowledge-mcp = "server:main"
