[project]
name = "oap-loki-mcp"
version = "1.0.0"
description = "MCP server for querying Loki logs"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "structlog>=24.1.0",
]

[project.scripts]
oap-loki-mcp = "loki_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loki_mcp_server"]
